# UCU_labs

./: README.md
ACS/: README.md
ACS/lab10_mpi-fialko_shvets_-master/: CMakeLists.txt  config_file.cfg  generate_maxtrix.py  matrix600.txt  readme.md
ACS/lab10_mpi-fialko_shvets_-master/inc/: image_maker.hpp  image_service.hpp  parse_config.hpp  parse_table.hpp  string_tools.hpp  table_manager.hpp  tinycolormap.hpp
ACS/lab10_mpi-fialko_shvets_-master/src/: image_maker.cpp  image_service.cpp  main.cpp  parse_config.cpp  parse_table.cpp  table_manager.cpp
ACS/lab1_cpp_productivity_comparison-shvets_fialko_krasnianskyi-master/: .gitignore  CMakeLists.txt  compile.sh  dataGenerator.py  install_prerequisites.sh  parse_from_file.cpp  parse_into_unsigned.cpp  prog1_runner.py  prog2_runner.py  pvalues.csv  pvalues.txt  readme.md
ACS/lab1_cpp_productivity_comparison-shvets_fialko_krasnianskyi-master/dependencies/: requirements.txt
ACS/lab1_cpp_productivity_comparison-shvets_fialko_krasnianskyi-master/options_parser/: options_parser.cpp  options_parser.h
ACS/lab1_cpp_productivity_comparison-shvets_fialko_krasnianskyi-master/src/: parse_from_string.cpp  parse_from_string.h  read_from_file.cpp  read_from_file.h
ACS/lab2_integral_sequential-shvets_fialko_-master/: CMakeLists.txt  prog_runner.py  readme.md
ACS/lab2_integral_sequential-shvets_fialko_-master/src/: integrate2d_main.cpp
ACS/lab3_integral_parallel-shvets_fialko_-master/: CMakeLists.txt  func2.cfg  readme.md
ACS/lab3_integral_parallel-shvets_fialko_-master/src/: integrate2d_conf.cpp  integrate2d_conf.hpp  integrate2d_main.cpp  time_measurements.hpp
ACS/lab4_integral_tasks_queue-shvets_fialko_-master/: CMakeLists.txt  func1.cfg  func3.cfg  prog_runner.py  readme.md
ACS/lab4_integral_tasks_queue-shvets_fialko_-master/plots/: plot.py
ACS/lab4_integral_tasks_queue-shvets_fialko_-master/src/: integrate2d_conf.cpp  integrate2d_main.cpp  time_measurements.hpp  ts_queue.h  ts_queue.tpp
ACS/lab5_integral_threadpool-shvets_fialko_-master/: CMakeLists.txt  prog_runner.py  readme.md
ACS/lab5_integral_threadpool-shvets_fialko_-master/plots/: plot.py
ACS/lab5_integral_threadpool-shvets_fialko_-master/src/: integrate2d_conf.hpp  integrate2d_main.cpp  threadpool.cpp  threadpool.h  ts_queue.h  ts_queue.tpp
ACS/lab6_word_count_sequential-fialko_shvets-master/: CMakeLists.txt  config_file.cfg  prog_runner.py  readme.md
ACS/lab6_word_count_sequential-fialko_shvets-master/src/: countwords.cpp  countwords.hpp  countwords_config.cpp  countwords_config.hpp  countwords_main.cpp  time_measurements.hpp
ACS/lab7_word_count_parallel-fialko_shvets-master/: CMakeLists.txt  config_file.cfg  plot_maker.py  prog_runner.py  readme.md
ACS/lab7_word_count_parallel-fialko_shvets-master/src/: countwords.cpp  countwords.hpp  countwords_config.cpp  countwords_main.cpp  string_tools.hpp  ts_queue.h  ts_queue.tpp
ACS/lab8_word_count_external_tools-fialko_shvets-master/: CMakeLists.txt  config_file.cfg  prog_runner.py  readme.md
ACS/lab8_word_count_external_tools-fialko_shvets-master/src/: countwords.cpp  countwords.hpp  countwords_config.hpp  par_tracker.hpp
ACS/lab9_word_count_high_abstraction-fialko_shvets-master/: CMakeLists.txt  config_file.cfg  plot_maker.py  prog_runner.py  readme.md
ACS/lab9_word_count_high_abstraction-fialko_shvets-master/src/: countwords.cpp  countwords.hpp  countwords_config.cpp  countwords_config.hpp
LA/: LA_Lab_2_Shvets_Fialko_Chaika.ipynb  LA_Lab_3_Shvets_Fialko_Chaika.ipynb  README.md
POC/: README.md
POC/lab1_cstring-ultimate-super-team-master/: .gitignore  CMakeLists.txt  README.md  demonstration.cpp  mystring.cpp  mystring.h
POC/lab2_make_cmake-ultimate-super-team-master/: .gitignore  CMakeLists.txt  README.md  bashfile.sh  bashfile_jpeg.sh
POC/lab2_make_cmake-ultimate-super-team-master/example/: CMakeLists.txt  Makefile  demonstration.cpp
POC/lab2_make_cmake-ultimate-super-team-master/other_library/: CMakeLists.txt
POC/lab2_make_cmake-ultimate-super-team-master/other_library/example/: CMakeLists.txt  Makefile
POC/lab3_strings_usage-ultimate-super-team-master/: .gitignore  CMakeLists.txt  README.md  mystring.cpp  mystring.h  task3.cpp  text.txt
POC/lab4_asm_func-asm_yaroshevych_shvets-master/: .gitignore  LICENSE  README.md  makefile  makefile_os.inc
POC/lab4_asm_func-asm_yaroshevych_shvets-master/func_1/: README.md  makefile
POC/lab4_asm_func-asm_yaroshevych_shvets-master/func_1/src/: func.asm  main_a.asm  main_c.c
POC/lab4_asm_func-asm_yaroshevych_shvets-master/func_2/: README.md
POC/lab4_asm_func-asm_yaroshevych_shvets-master/func_2/src/: func.asm  main_a.asm  main_c.c
POC/lab4_asm_func-asm_yaroshevych_shvets-master/x86/include/: 80386.inc
POC/stm32_5-1-shvets_fialko-master/: README.md
POC/stm32_5-1-shvets_fialko-master/counter/: .cproject  .project  counter Debug.launch  counter.ioc
POC/stm32_5-1-shvets_fialko-master/counter/Core/Inc/: main.h  stm32f4xx_it.h
POC/stm32_5-1-shvets_fialko-master/counter/Core/Src/: main.c  stm32f4xx_it.c
POC/stm32_5-1-shvets_fialko-master/counter/Debug/: counter.elf  counter.list  counter.map  makefile
POC/stm32_5-1-shvets_fialko-master/directed_light/: .cproject  .mxproject  .project  directed_light Debug.launch  directed_light.ioc
POC/stm32_5-1-shvets_fialko-master/directed_light/Core/Inc/: main.h
POC/stm32_5-1-shvets_fialko-master/directed_light/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
POC/stm32_5-1-shvets_fialko-master/directed_light/Debug/: directed_light.elf  directed_light.list  directed_light.map  makefile
POC/stm32_6-1-shvets-master/: README.md
POC/stm32_6-1-shvets-master/hcsr04_test/: .cproject  .project  hcsr04_test Debug.launch  hcsr04_test.ioc
POC/stm32_6-1-shvets-master/hcsr04_test/Core/Inc/: lcd5110.h  lcd5110_ll.h  main.h  stm32f4xx_it.h
POC/stm32_6-1-shvets-master/hcsr04_test/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
POC/stm32_6-1-shvets-master/hcsr04_test/Debug/: hcsr04_test.elf  hcsr04_test.list  hcsr04_test.map  makefile  objects.list
(+24 files in other folders)
